jeez the permissions stuff sucks!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">SimpleChaseRun</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="permissions_title">Permissions</string>
+    <string name="permissions_message">This app needs Location Permissions to function</string>
+    <string name="permissions_location">Location Permissions</string>
+    <string name="permission_background">Background Location Permission</string>
+    <string name="permission_background_settings">Please allow all-time location access in settings</string>
+    <string name="permission_granted">Granted</string>
+    <string name="permissions_button_text">Grant Permission</string>
 </resources>
