--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SimpleChaseRun</string>
+    <string name="app_friendly_name">Chase.Run</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="permissions_title">Permissions</string>
