--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="monster_name_zombie">Zombie</string>
     <string name="monster_name_infected">Infected</string>
     <string name="monster_name_t_rex">T-Rex</string>
+
+    <string name="monster_left_text">Monsters Left: %d</string>
 </resources>
